--- a/react-front-end/src/components/Table.css
+++ b/react-front-end/src/components/Table.css
@@ -4,14 +4,15 @@
   box-shadow: 20px 16px 44px -16px rgba(101, 101, 102, 1);
   width: 100%;
   max-height: 85%;
-  max-width: 500px;
+  max-width: 800px;
   background-color: white;
   top: 60px;
-  left: 0px;
-  right: 0px;
+  left: 0;
+  right: 0;
+  margin: auto;
   opacity: 0.6;
   overflow: auto;
-  color: white;
+  color: black;
 }
 
 #airlinelogo {
@@ -22,8 +23,6 @@
 
 table {
   width: 100%;
-  max-width: 260px;
-  table-layout: fixed;
   overflow-wrap: break-word;
   vertical-align: middle;
 }
