--- a/react-front-end/src/components/Table.css
+++ b/react-front-end/src/components/Table.css
@@ -9,7 +9,10 @@
   top: 60px;
   left: 0;
   right: 0;
-  margin: auto;
+  margin-left: auto;
+  margin-right: auto;
+  margin-bottom: 15px;
+  margin-top: 15px;
   opacity: 0.6;
   overflow: auto;
   color: black;
