--- a/react-front-end/src/App.css
+++ b/react-front-end/src/App.css
@@ -1,33 +1,41 @@
-.App {
+#main {
+  margin-left: 20px;
+  margin-right: 20px;
+}
+
+#nav_button {
   text-align: center;
+  margin: 10px;
 }
 
-.App-logo {
-  animation: App-logo-spin infinite 20s linear;
-  height: 40vmin;
-  pointer-events: none;
+#home_button,
+#new_button {
+  border: 3px solid;
+  border-radius: 10px;
+  padding: 3px;
+  margin: 10px;
 }
 
-.App-header {
-  background-color: #282c34;
-  min-height: 100vh;
-  display: flex;
-  flex-direction: column;
-  align-items: center;
-  justify-content: center;
-  font-size: calc(10px + 2vmin);
+#home_button:hover {
   color: white;
+  background: rgb(69, 139, 215, 0.4);
 }
 
-.App-link {
-  color: #61dafb;
+#home_button {
+  color: black;
+  border-color: rgb(69, 139, 215);
+  background-color: rgb(69, 139, 215, 0.1);
+  transition: all ease-in-out 0.3s;
 }
 
-@keyframes App-logo-spin {
-  from {
-    transform: rotate(0deg);
-  }
-  to {
-    transform: rotate(360deg);
-  }
+#new_button:hover {
+  color: white;
+  background: rgb(44, 203, 155, 0.5);
+}
+
+#new_button {
+  color: black;
+  border-color: rgb(44, 203, 155);
+  background-color: rgb(44, 203, 155, 0.1);
+  transition: all ease-in-out 0.3s;
 }
