--- a/react-front-end/src/index.css
+++ b/react-front-end/src/index.css
@@ -1,4 +1,5 @@
 body {
+  background-color: rgb(208, 223, 237);
   margin: 0;
   padding: 0;
   font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", "Roboto", "Oxygen",
