add new add img and check img for new order table

--- a/react-front-end/src/index.css
+++ b/react-front-end/src/index.css
@@ -17,3 +17,14 @@ code {
 a {
   text-decoration: none;
 }
+
+#button_group {
+  text-align: right;
+  max-width: 800px;
+  margin-left: auto;
+  margin-right: auto;
+}
+
+span {
+  vertical-align: middle;
+}
