--- a/react-front-end/src/components/NewOrder.css
+++ b/react-front-end/src/components/NewOrder.css
@@ -9,7 +9,10 @@
   top: 60px;
   left: 0;
   right: 0;
-  margin: auto;
+  margin-left: auto;
+  margin-right: auto;
+  margin-bottom: 10px;
+  margin-top: 10px;
   opacity: 0.6;
   overflow: auto;
   color: black;
@@ -70,4 +73,19 @@ tbody tr:nth-child(even) {
 /* Handle on hover */
 ::-webkit-scrollbar-thumb:hover {
   background: #0000cd;
+}
+
+#add_button,
+#check_button {
+  height: 40px;
+  margin-right: 10px;
+  outline: none;
+}
+
+#add_text,
+#check_text {
+  font-family: "Trebuchet MS", "Lucida Sans Unicode", "Lucida Grande",
+    "Lucida Sans", Arial, sans-serif;
+  display: inline;
+  margin-right: 10px;
 }
