add delete post to database, working and deleting the corresponding orders

--- a/react-front-end/src/components/Table.css
+++ b/react-front-end/src/components/Table.css
@@ -98,3 +98,8 @@ tbody tr:nth-child(even) {
   display: inline;
   margin-right: 10px;
 }
+
+#delete_message {
+  color: red;
+  margin-right: 10px;
+}
