--- a/react-front-end/src/index.css
+++ b/react-front-end/src/index.css
@@ -2,6 +2,7 @@ body {
   background-color: rgb(208, 223, 237);
   margin: 0;
   padding: 0;
+  font-size: 2vw;
   font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", "Roboto", "Oxygen",
     "Ubuntu", "Cantarell", "Fira Sans", "Droid Sans", "Helvetica Neue",
     sans-serif;
@@ -16,6 +17,10 @@ code {
 
 a {
   text-decoration: none;
+}
+
+td > input th > input {
+  width: 100%;
 }
 
 #button_group {
