--- a/react-front-end/src/index.css
+++ b/react-front-end/src/index.css
@@ -2,12 +2,18 @@ body {
   background-color: rgb(208, 223, 237);
   margin: 0;
   padding: 0;
-  font-size: 2vw;
+  font-size: 1.6vw;
   font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", "Roboto", "Oxygen",
     "Ubuntu", "Cantarell", "Fira Sans", "Droid Sans", "Helvetica Neue",
     sans-serif;
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
+}
+
+@media (max-width: 800px) {
+  body {
+    font-size: 2.2vw;
+  }
 }
 
 code {
