add background img

--- a/src/components/Login.css
+++ b/src/components/Login.css
@@ -2,3 +2,8 @@
   margin-left: auto;
   margin-right: auto;
 }
+
+body {
+  background: url("./images/background/bg.jpg") no-repeat center center fixed;
+  background-size: cover;
+}
