--- a/src/index.css
+++ b/src/index.css
@@ -10,6 +10,12 @@ body {
   -moz-osx-font-smoothing: grayscale;
 }
 
+body,
+html {
+  height: 100%;
+  width: 100%;
+}
+
 @media (max-width: 800px) {
   body {
     font-size: 2.2vw;
