--- a/src/components/NewOrder.css
+++ b/src/components/NewOrder.css
@@ -17,6 +17,21 @@
   color: black;
 }
 
+#newOrderTable td,
+#newOrderTable th {
+  border: 1px solid #dddddd;
+  text-align: left;
+  padding: 5px;
+  width: 25%;
+}
+
+#newOrderTable td input,
+#newOrderTable th input {
+  width: 90%;
+  border: none;
+  background-color: rgba(255, 255, 255, 0.7);
+}
+
 #errorEmpty {
   color: red;
 }
