--- a/src/components/Dashboard.css
+++ b/src/components/Dashboard.css
@@ -7,3 +7,18 @@
   margin-left: auto;
   transition: all ease-in-out 0.5s;
 }
+
+#dashboardTable {
+  background-color: transparent;
+  text-align: center;
+  border: none;
+}
+
+#dashboardTable tr {
+  background-color: transparent;
+  text-align: center;
+}
+
+#dashboardTable th {
+  padding: 10px;
+}
