--- a/src/index.css
+++ b/src/index.css
@@ -3,8 +3,8 @@ body {
   margin: 0;
   padding: 0;
   font-size: 2vw;
-  font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", "Roboto", "Oxygen",
-    "Ubuntu", "Cantarell", "Fira Sans", "Droid Sans", "Helvetica Neue",
+  font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen',
+    'Ubuntu', 'Cantarell', 'Fira Sans', 'Droid Sans', 'Helvetica Neue',
     sans-serif;
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
@@ -23,7 +23,7 @@ html {
 }
 
 code {
-  font-family: source-code-pro, Menlo, Monaco, Consolas, "Courier New",
+  font-family: source-code-pro, Menlo, Monaco, Consolas, 'Courier New',
     monospace;
 }
 
@@ -35,21 +35,6 @@ table {
   width: 100%;
   overflow-wrap: break-word;
   vertical-align: middle;
-}
-
-td,
-th {
-  border: 1px solid #dddddd;
-  text-align: left;
-  padding: 5px;
-  width: 25%;
-}
-
-td input,
-th input {
-  width: 90%;
-  border: none;
-  background-color: rgba(255, 255, 255, 0.7);
 }
 
 #button_group {
