use history.push to do redirect when click add icon, add add icon hover text

--- a/src/components/Dashboard.css
+++ b/src/components/Dashboard.css
@@ -38,3 +38,21 @@
     font-size: 8vw;
   }
 }
+
+#AddCircleIconText {
+  visibility: visible;
+  width: 120px;
+  background-color: black;
+  color: #fff;
+  text-align: center;
+  border-radius: 6px;
+  padding: 5px 0;
+
+  /* Position the tooltip */
+  position: absolute;
+  z-index: 99;
+}
+
+#AddCircleIcon:hover #AddCircleIconText {
+  visibility: visible;
+}
